<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Title"
            app:layout_scrollFlags="scroll|enterAlwaysCollapsed"
            app:titleEnabled="false">



        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:scrollingCache="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
           android:paddingBottom="@dimen/spacing_xxxxlarge" >

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="9dp"
                android:layout_marginRight="9dp"
                android:layout_marginBottom="12dp"
                android:layout_marginTop="5dp"
                app:cardElevation="6dp"
                app:cardCornerRadius="4dp">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/spacing_middle"
                   >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_middle"
                        android:layout_marginBottom="@dimen/spacing_middle"
                        android:gravity="center_vertical"
                        android:minHeight="@dimen/spacing_xxlarge"
                        android:orientation="horizontal"
                        android:paddingLeft="@dimen/spacing_medium"
                        android:paddingRight="@dimen/spacing_medium">

                        <View
                            android:layout_width="@dimen/spacing_large"
                            android:layout_height="wrap_content" />

                        <ImageView
                            android:layout_width="@dimen/spacing_xxlarge"
                            android:layout_height="@dimen/spacing_xxlarge"
                            app:srcCompat="@mipmap/ic_launcher_round" />

                        <View
                            android:layout_width="@dimen/spacing_large"
                            android:layout_height="wrap_content" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <com.maugarciaf.employeemeeting.customfonts.CTextViewSansBold
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/app_name"
                                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                                android:textSize="16sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/splash_subtitle"
                                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                                android:textSize="12sp" />

                        </LinearLayout>


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:gravity="center_vertical"
                        android:minHeight="@dimen/spacing_xxlarge"
                        android:orientation="horizontal"
                        android:paddingLeft="@dimen/spacing_medium"
                        android:paddingRight="@dimen/spacing_medium"
                        android:focusable="true">

                        <View
                            android:layout_width="@dimen/spacing_mlarge"
                            android:layout_height="wrap_content" />

                        <ImageButton
                            android:layout_width="@dimen/spacing_xmlarge"
                            android:layout_height="@dimen/spacing_xmlarge"
                            android:background="@android:color/transparent"
                            android:tint="@color/grey_40"
                            app:srcCompat="@drawable/ic_info_black_24dp" />

                        <View
                            android:layout_width="@dimen/spacing_mlarge"
                            android:layout_height="wrap_content" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <com.maugarciaf.employeemeeting.customfonts.CTextViewSansBold
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/version"
                                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                                android:textSize="16sp"
                                app:fontFamily="sans-serif-medium" />

                            <TextView
                                android:id="@+id/version"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/num_version"
                                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                                android:textSize="12sp" />

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/update"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center_vertical"
                        android:minHeight="@dimen/spacing_xxlarge"
                        android:orientation="horizontal"
                        android:paddingLeft="@dimen/spacing_medium"
                        android:paddingRight="@dimen/spacing_medium">

                        <View
                            android:layout_width="@dimen/spacing_mlarge"
                            android:layout_height="wrap_content" />

                        <ImageButton
                            android:layout_width="@dimen/spacing_xmlarge"
                            android:layout_height="@dimen/spacing_xmlarge"
                            android:background="@android:color/transparent"
                            android:tint="@color/grey_40"
                            app:srcCompat="@drawable/ic_update_black_24dp" />

                        <View
                            android:layout_width="@dimen/spacing_mlarge"
                            android:layout_height="wrap_content" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <com.maugarciaf.employeemeeting.customfonts.CTextViewSansBold
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/update_title"
                                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                                android:textColor="@color/grey_80"
                                app:fontFamily="sans-serif-medium" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/last_update"
                                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                                android:textColor="@color/grey_40" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_medium" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="9dp"
                android:layout_marginRight="9dp"
                android:layout_marginBottom="12dp"
                app:cardElevation="6dp"
                app:cardCornerRadius="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/spacing_middle"
                    android:paddingBottom="@dimen/spacing_middle">

                    <com.maugarciaf.employeemeeting.customfonts.CTextViewSansBold
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/spacing_mlarge"
                        android:layout_marginTop="@dimen/spacing_middle"
                        android:layout_marginRight="@dimen/spacing_mlarge"
                        android:layout_marginBottom="@dimen/spacing_middle"
                        android:text="@string/developer_title"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:textColor="@color/grey_90"
                        app:fontFamily="sans-serif-medium" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center_vertical"
                        android:minHeight="@dimen/spacing_xxlarge"
                        android:orientation="horizontal"
                        android:paddingLeft="@dimen/spacing_medium"
                        android:paddingRight="@dimen/spacing_medium">

                        <View
                            android:layout_width="@dimen/spacing_mlarge"
                            android:layout_height="wrap_content" />

                        <ImageButton
                            android:layout_width="@dimen/spacing_xmlarge"
                            android:layout_height="@dimen/spacing_xmlarge"
                            android:background="@android:color/transparent"
                            android:contentDescription="todo"
                            android:tint="@color/grey_40"
                            app:srcCompat="@drawable/ic_person_black_24dp" />

                        <View
                            android:layout_width="@dimen/spacing_mlarge"
                            android:layout_height="wrap_content" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <com.maugarciaf.employeemeeting.customfonts.CTextViewSansBold
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/name_developer"
                                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                                android:textColor="@color/grey_80"
                                app:fontFamily="sans-serif-medium" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/countr"
                                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                                android:textColor="@color/grey_40" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/mail"
                                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                                android:textColor="@color/grey_40" />

                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_medium" />
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="9dp"
                android:layout_marginRight="9dp"
                android:layout_marginBottom="12dp"
                android:layout_marginTop="5dp"
                app:cardElevation="6dp"
                app:cardCornerRadius="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/spacing_middle"
                    android:paddingBottom="@dimen/spacing_middle">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center_vertical"
                        android:minHeight="@dimen/spacing_xxlarge"
                        android:orientation="horizontal"
                        android:paddingLeft="@dimen/spacing_medium"
                        android:paddingRight="@dimen/spacing_medium">

                        <View
                            android:layout_width="@dimen/spacing_large"
                            android:layout_height="wrap_content" />

                        <ImageButton
                            android:layout_width="@dimen/spacing_xmlarge"
                            android:layout_height="@dimen/spacing_xmlarge"
                            android:background="@android:color/transparent"
                            android:tint="@color/grey_40"
                            app:srcCompat="@drawable/ic_info_black_24dp" />

                        <View
                            android:layout_width="@dimen/spacing_large"
                            android:layout_height="wrap_content" />

                        <com.maugarciaf.employeemeeting.customfonts.CTextViewSansBold
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/info_title"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            android:textColor="@color/grey_90"
                            app:fontFamily="sans-serif-medium" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/spacing_middle"
                        android:gravity="center_vertical"
                        android:minHeight="@dimen/spacing_xxlarge"
                        android:orientation="horizontal"
                        android:paddingLeft="@dimen/spacing_medium"
                        android:paddingRight="@dimen/spacing_medium">

                        <View
                            android:layout_width="@dimen/spacing_large"
                            android:layout_height="wrap_content" />
                        <View
                            android:layout_width="@dimen/spacing_large"
                            android:layout_height="wrap_content" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/about_info_app"
                                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                                android:textColor="@color/grey_40" />

                        </LinearLayout>


                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</LinearLayout>

